[package]
name = "sysload"
version = "1.0.14"
authors = ["Calinyara <mr.dengjie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.5.10"
tokio = "0.1.22"
clap = "2.33.0"
thread-priority = "0.2.0"
