[package]
name = "dtop"
version = "2.0.2"
authors = ["Calinyara <mr.dengjie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.5.10"
tokio = "0.1.22"
clap = "2.33.0"
thread-priority = "0.2.0"
itertools = "0.9.0"
